cabal-version:      2.4
name:               acme-not-a-joke
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: implements ACME clients (rfc-8555)

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Lucas DiCioccio
maintainer:         lucas@dicioccio.fr

-- A copyright notice.
copyright: Lucas DiCioccio 2023
-- category:
extra-source-files: CHANGELOG.md

library
    -- Modules included in this executable, other than Main.
    other-modules: Acme.NotAJoke.Client

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0
                    , aeson
                    , bytestring
                    , text
                    , cryptohash-sha256
                    , base16-bytestring
                    , wreq
                    , lens
                    , jose
                    , time
    hs-source-dirs:   app
                    , src
    default-language: Haskell2010
