cabal-version:      2.4
name:               acme-not-a-joke
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: implements ACME clients (rfc-8555)

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Lucas DiCioccio
maintainer:         lucas@dicioccio.fr

-- A copyright notice.
copyright: Lucas DiCioccio 2023
-- category:
extra-source-files: CHANGELOG.md

library
    -- Modules included in this executable, other than Main.
    other-modules: Paths_acme_not_a_joke
    exposed-modules: Acme.NotAJoke.Account
                   , Acme.NotAJoke.Authorization
                   , Acme.NotAJoke.CSR
                   , Acme.NotAJoke.Certificate
                   , Acme.NotAJoke.Challenge
                   , Acme.NotAJoke.Client
                   , Acme.NotAJoke.Directory
                   , Acme.NotAJoke.Endpoint
                   , Acme.NotAJoke.Field
                   , Acme.NotAJoke.JWS
                   , Acme.NotAJoke.Meta
                   , Acme.NotAJoke.Nonce
                   , Acme.NotAJoke.Order
                   , Acme.NotAJoke.Validation

    -- LANGUAGE extensions used by modules in this package.
    default-extensions: OverloadedStrings DataKinds TypeFamilies TypeOperators FlexibleInstances OverloadedRecordDot
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0
                    , aeson
                    , bytestring
                    , text
                    , cryptohash-sha256
                    , base16-bytestring
                    , wreq
                    , lens
                    , jose
                    , time
    hs-source-dirs:   app
                    , src
    ghc-options: -Wall -Werror
    default-language: Haskell2010
