cabal-version:      2.4
name:               acme-not-a-joke
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: implements ACME clients (rfc-8555)

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Lucas DiCioccio
maintainer:         lucas@dicioccio.fr

-- A copyright notice.
copyright: Lucas DiCioccio 2023
-- category:
extra-source-files: CHANGELOG.md

library
    hs-source-dirs: src
    ghc-options: -Wall -Wwarn=missing-home-modules
    default-language: Haskell2010
    default-extensions: OverloadedStrings DataKinds TypeFamilies TypeOperators FlexibleInstances OverloadedRecordDot
    exposed-modules:
      Acme.NotAJoke.Api.Account
      Acme.NotAJoke.Api.Authorization
      Acme.NotAJoke.Api.Certificate
      Acme.NotAJoke.Api.Challenge
      Acme.NotAJoke.Api.CSR
      Acme.NotAJoke.Api.Directory
      Acme.NotAJoke.Api.Endpoint
      Acme.NotAJoke.Api.Field
      Acme.NotAJoke.Api.JWS
      Acme.NotAJoke.Api.Meta
      Acme.NotAJoke.Api.Nonce
      Acme.NotAJoke.Api.Order
      Acme.NotAJoke.Api.Validation
      Acme.NotAJoke.Client
      Acme.NotAJoke.Dancer
      Acme.NotAJoke.LetsEncrypt
      Acme.NotAJoke.KeyManagement
      Acme.NotAJoke.CertManagement
    build-depends:    base >=4.16.3.0
                    , aeson
                    , bytestring
                    , text
                    , cryptohash-sha256
                    , base16-bytestring
                    , wreq
                    , lens
                    , jose
                    , time
                    , filepath
